# xnes

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  compile_flags.txt
.github/workflows/: cmake.yml
include/: xnes.h
src/: cpu.c  cpu.h  cpu_decode.c  cpu_decode.h  cpu_decoder.c  cpu_decoder.h  cpu_emu.c  cpu_emu.h  cpu_emulation.c  cpu_emulation.h  cpu_instruction.c  cpu_step.c  cpu_step.h  cpu_trace.c  cpu_trace.h  error.c  error.h  input.c  input.h  main.c  mapper.c  mapper.h  mem.c  memory_map.c  memory_map.h  nes.c  nes.h  nes_emu.c  nes_emu.h  ppu.c  ppu.h  ppu_emu.c  ppu_emu.h  ppu_emulation.c  ppu_io.c  ppu_render.c  ppu_render.h  rom.c  rom.h  xnes.c
src/include/: cpu.h  cpu_emulation.h  cpu_instruction.h  error.h  mapper.h  mem.h  nes.h  ppu.h  ppu_emulation.h  ppu_io.h  rom.h
src/sdl/: main.c
tests/: CMakeLists.txt  mock_mem.c  mock_mem.h  test_common.h  test_cpu.c  test_cpu_emu.c  test_cpu_emulation.c  test_error.c  test_input.c  test_mapper.c  test_nestest.c  test_ppu.c  test_ppu_emu.c  test_ppu_io.c  test_rom.c
