file(GLOB MOCKED_SOURCES "${CMAKE_SOURCE_DIR}/src/*.c")

list(REMOVE_ITEM MOCKED_SOURCES "${CMAKE_SOURCE_DIR}/src/mem.c")
list(APPEND MOCKED_SOURCES "${CMAKE_SOURCE_DIR}/tests/mock_mem.c")

add_library(mocked_xnes STATIC ${MOCKED_SOURCES})
target_include_directories(mocked_xnes PRIVATE ${CMAKE_SOURCE_DIR}/include ${CMAKE_SOURCE_DIR}/src)
target_include_directories(mocked_xnes PRIVATE ${CMAKE_SOURCE_DIR}/tests)
set_target_properties(mocked_xnes PROPERTIES C_STANDARD 11)
target_compile_definitions(mocked_xnes PRIVATE UNIT_TEST)

set(TEST_DATA_PATH "${CMAKE_CURRENT_SOURCE_DIR}/testdata")

macro(XNES_ADD_MOCKED_TEST NAME SOURCE)
  add_executable("${NAME}" "${SOURCE}" "mock_mem.c")
  target_link_libraries("${NAME}" mocked_xnes)
  target_include_directories("${NAME}" PRIVATE ${CMAKE_SOURCE_DIR}/src)
  target_include_directories("${NAME}" PRIVATE ${CMAKE_SOURCE_DIR}/tests)
  target_compile_definitions("${NAME}" PRIVATE TEST_DATA_PATH="${TEST_DATA_PATH}")
  set_target_properties("${NAME}" PROPERTIES C_STANDARD 11)
  add_test("${NAME}" "${NAME}")
endmacro()

XNES_ADD_MOCKED_TEST(cpu_test test_cpu.c)
XNES_ADD_MOCKED_TEST(cpu_emulation_test test_cpu_emulation.c)
XNES_ADD_MOCKED_TEST(rom_test test_rom.c)
XNES_ADD_MOCKED_TEST(mapper_test test_mapper.c)
XNES_ADD_MOCKED_TEST(input_test test_input.c)
XNES_ADD_MOCKED_TEST(ppu_test test_ppu.c)
XNES_ADD_MOCKED_TEST(ppu_io_test test_ppu_io.c)

macro(XNES_ADD_TEST NAME SOURCE)
  add_executable("${NAME}" "${SOURCE}")
  target_link_libraries("${NAME}" xnes)
  target_include_directories("${NAME}" PRIVATE ${CMAKE_SOURCE_DIR}/src)
  target_include_directories("${NAME}" PRIVATE ${CMAKE_SOURCE_DIR}/tests)
  target_compile_definitions("${NAME}" PRIVATE TEST_DATA_PATH="${TEST_DATA_PATH}")
  set_target_properties("${NAME}" PROPERTIES C_STANDARD 11)
  add_test("${NAME}" "${NAME}")
endmacro()

XNES_ADD_TEST(nestest test_nestest.c)
